# stereo-disparity

./: CMakeLists.txt  README.md
app/conf/: stereo-disparity.xml
include/iCub/: disparityModule.h
src/: disparityModule.cpp  main.cpp
